# masto

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp  mastoapi.cpp  mastoapi.h  platform.cpp  platform.h  state.h  textfield.cpp  textfield.h
